--- a/config/drupal/default/contact.form.feedback.yml
+++ b/config/drupal/default/contact.form.feedback.yml
@@ -7,7 +7,7 @@ _core:
 id: feedback
 label: 'Website feedback'
 recipients:
-  - info@learner-kit.io
+  - info@kt-session.io
 reply: ''
 weight: 0
 message: 'Your message has been sent.'
