--- a/config/drupal/default/system.site.yml
+++ b/config/drupal/default/system.site.yml
@@ -1,6 +1,6 @@
 uuid: e17c80a5-3b4d-4739-a550-f02f027901c6
-name: Learner-Kit
-mail: info@learner-kit.io
+name: kt-session
+mail: info@kt-session.io
 slogan: ''
 page:
   403: ''
