--- a/config/local.config.yml
+++ b/config/local.config.yml
@@ -7,8 +7,8 @@ composer_global_packages: []
 configure_drush_aliases: false
 
 # Base settings for vagrant box
-vagrant_hostname: learner-kit.wndrs
-vagrant_machine_name: learner-kit
+vagrant_hostname: kt-session.wndrs
+vagrant_machine_name: kt-session
 vagrant_ip: 192.168.141.183
 vagrant_box: geerlingguy/ubuntu1804
 
