--- a/robo.yml
+++ b/robo.yml
@@ -2,7 +2,7 @@ drupal:
   hash_salt: 5616d2e84b6c8f4bb7d0543e67a93b56a8f62806
 
 drupal_vm:
-  host: learner-kit.wndrs
+  host: kt-session.wndrs
 
 drush:
-  alias_group: learner-kit
+  alias_group: kt-session
