--- a/.gitignore
+++ b/.gitignore
@@ -87,7 +87,7 @@ Temporary Items
 /private/*
 !/private/.gitkeep
 
-*--dump.sql
+!*kt-session-dev.sql
 
 ### JetBrains template
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio and WebStorm
