--- a/.gitignore
+++ b/.gitignore
@@ -87,7 +87,8 @@ Temporary Items
 /private/*
 !/private/.gitkeep
 
-!*kt-session-dev.sql
+*.sql
+!kt-session-dev.sql
 
 ### JetBrains template
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio and WebStorm
