--- a/web/modules/custom/kt_session/kt_session.info.yml
+++ b/web/modules/custom/kt_session/kt_session.info.yml
@@ -2,4 +2,5 @@ name: KT Session
 type: module
 description: Demonstration of Custom Module development
 core_version_requirement: '^8 || ^9'
+core: 8.x
 package: Welldev
