--- a/config/drupal/default/core.extension.yml
+++ b/config/drupal/default/core.extension.yml
@@ -1,4 +1,6 @@
 module:
+  admin_toolbar: 0
+  admin_toolbar_tools: 0
   automated_cron: 0
   big_pipe: 0
   block: 0
@@ -32,6 +34,7 @@ module:
   path_alias: 0
   quickedit: 0
   rdf: 0
+  rsvplist: 0
   search: 0
   shortcut: 0
   system: 0
