--- a/web/modules/custom/rsvplist/rsvplist.routing.yml
+++ b/web/modules/custom/rsvplist/rsvplist.routing.yml
@@ -4,4 +4,12 @@ rsvplist.form:
     _form: '\Drupal\rsvplist\Form\RSVPForm'
     _title: 'RSVP to this Event'
   requirements:
-    _permission: 'access content'
+    _permission: 'view rsvplist'
+
+rsvplist.admin_settings:
+  path: '/admin/config/content/rsvplist'
+  defaults:
+    _form: '\Drupal\rsvplist\Form\RSVPSettingsForm'
+    _title: 'RSVP List Settings'
+  requirements:
+    _permission: 'administer rsvplist'
